--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "OKPConnectionString": "Server=tcp:okpbackend-server.database.windows.net,1433;Initial Catalog=okpbackend-db;Persist Security Info=False;User ID=okpbackend;Password={DatabasePassword};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "OKPConnectionString": "Server=localhost; Database=OKPDb; Trusted_Connection=True; TrustServerCertificate=True;"
   },
   "Jwt": {
     "Issuer": "http://localhost:5143/",
