--- a/appsettings.json
+++ b/appsettings.json
@@ -7,10 +7,16 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "OKPConnectionString": "Server=tcp:okpbackend-server.database.windows.net,1433;Initial Catalog=rk-db;Persist Security Info=False;User ID=okpbackend;Password={DatabasePassword};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "OKPConnectionString": "Server=tcp:okpbackend-server.database.windows.net,1433;Initial Catalog=rk-db;Persist Security Info=False;User ID=okpbackend;Password=rakennustenkaupunki123!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Jwt": {
     "Issuer": "http://localhost:5143/",
     "Audience": "http://localhost:5143/"
+  },
+  "KeyVault": {
+    "KeyVault":"https://keyvaultrk123.vault.azure.net/",
+    "ClientId": "Client1",
+    "ClientSecret": "clientsecret",
+    "DirectoryID": "Clientsecretapp"
   }
 }
